added additional baseline experiments for EfficientNet

--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -92,6 +92,179 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e80997c9-94db-402b-8999-9a389a07eb5d",
+   "metadata": {},
+   "source": [
+    "# Museum baseline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c4dc718-70c5-414a-959e-68852934bc64",
+   "metadata": {},
+   "source": [
+    "## Test EfficientNet Museum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ccebf65-3d06-47ac-b916-bf2bddbadcea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 20\n",
+    "class_weight = mit.findClassWeights(train_batches)\n",
+    "\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (300,300), \"Efficient\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(lr_schedule), \n",
+    "                           loss=\"binary_crossentropy\", \n",
+    "                           metrics=metric_list)\n",
+    "\n",
+    "\n",
+    "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight=None, weight=False)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_EfficientNet_Museum\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "utils.saveModel(model, dir_name + \"/EfficientNet_Museum.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d714561a-56e9-4774-b7ad-686f9487534c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
+    "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a3cd7f2-9da4-4e40-b4e2-3d6031ec684d",
+   "metadata": {},
+   "source": [
+    "## Test EfficientNet Musuem (weighted) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c24c9550-9309-4c3f-a477-b3bdbdf28b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 20\n",
+    "class_weight = mit.findClassWeights(train_batches)\n",
+    "\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (300,300), \"Efficient\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(lr_schedule), \n",
+    "                           loss=\"binary_crossentropy\", \n",
+    "                           metrics=metric_list)\n",
+    "\n",
+    "\n",
+    "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_EfficientNet_Musuem_re\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "utils.saveModel(model, dir_name + \"/EfficientNet_Musuem_re.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15990351-8795-4a06-be62-3f62d9ceee42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
+    "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12522c88-52c9-4df1-86e7-1844cada3b1a",
+   "metadata": {},
+   "source": [
+    "## Test EfficientNet Museum augmented (unweighted) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d26ce029-eefa-443c-b589-5ee06318a5f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 20\n",
+    "class_weight = mit.findClassWeights(train_batches)\n",
+    "\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(True, (300,300), \"Efficient\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(lr_schedule), \n",
+    "                           loss=\"binary_crossentropy\", \n",
+    "                           metrics=metric_list)\n",
+    "\n",
+    "\n",
+    "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_EfficientNet_Museum_aug\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "utils.saveModel(model, dir_name + \"/EfficientNet_Mueseum_aug.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f94397f8-c473-4450-8ac8-038b78f00ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
+    "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d09f7e84",
    "metadata": {},
    "source": [
@@ -692,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
