added Museum baseline experiments to Xception

--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -110,7 +110,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ccebf65-3d06-47ac-b916-bf2bddbadcea",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "epochs = 20\n",
