--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -91,6 +91,181 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc9c32f7-de91-4afb-b1ee-b206414a6089",
+   "metadata": {},
+   "source": [
+    "# Museum baseline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8add24d-c145-46e0-9b6a-c354ed8ad1e0",
+   "metadata": {},
+   "source": [
+    "## Test EfficientNet Museum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e913deaa-1107-474f-b38f-90c9c4646da7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "epochs = 20\n",
+    "class_weight = mit.findClassWeights(train_batches)\n",
+    "\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (300,300), \"Xception\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(lr_schedule), \n",
+    "                           loss=\"binary_crossentropy\", \n",
+    "                           metrics=metric_list)\n",
+    "\n",
+    "\n",
+    "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight=None, weight=False)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_Xception_Museum\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "utils.saveModel(model, dir_name + \"/Xception_Museum.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e64bcc-60f3-41cc-a538-85aaa49dc45a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
+    "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02218098-a690-469d-bc77-234531804871",
+   "metadata": {},
+   "source": [
+    "## Test EfficientNet Musuem (weighted) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f89fc531-40c2-40a8-a3b8-d5b5e04914d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 20\n",
+    "class_weight = mit.findClassWeights(train_batches)\n",
+    "\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (300,300), \"Xception\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(lr_schedule), \n",
+    "                           loss=\"binary_crossentropy\", \n",
+    "                           metrics=metric_list)\n",
+    "\n",
+    "\n",
+    "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_Xception_Musuem_re\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "utils.saveModel(model, dir_name + \"/Xception_Musuem_re.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0552157f-3045-40b6-af64-38ad6596133a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
+    "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1a849ce-578b-4216-9f68-f55ab81d5c9d",
+   "metadata": {},
+   "source": [
+    "## Test EfficientNet Museum augmented (unweighted) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c4d33c-2f7c-4f1d-ab68-ee2adf433a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 20\n",
+    "class_weight = mit.findClassWeights(train_batches)\n",
+    "\n",
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(True, (300,300), \"Xception\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(lr_schedule), \n",
+    "                           loss=\"binary_crossentropy\", \n",
+    "                           metrics=metric_list)\n",
+    "\n",
+    "\n",
+    "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_Xception_Museum_aug\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "utils.saveModel(model, dir_name + \"/Xception_Mueseum_aug.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3dd366-2b17-430b-933c-171d85f781f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
+    "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63876238",
    "metadata": {},
    "source": [
@@ -109,9 +284,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "58431690",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "epochs = 20\n",
@@ -695,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
