--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -160,7 +160,7 @@
    "id": "8a3cd7f2-9da4-4e40-b4e2-3d6031ec684d",
    "metadata": {},
    "source": [
-    "## Test EfficientNet Musuem (weighted) "
+    "## Test EfficientNet Museum (weighted) "
    ]
   },
   {
