--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -102,7 +102,7 @@
    "id": "d8add24d-c145-46e0-9b6a-c354ed8ad1e0",
    "metadata": {},
    "source": [
-    "## Test EfficientNet Museum"
+    "## Test Xception Museum"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "id": "02218098-a690-469d-bc77-234531804871",
    "metadata": {},
    "source": [
-    "## Test EfficientNet Musuem (weighted) "
+    "## Test Xception Museum (weighted) "
    ]
   },
   {
@@ -214,7 +214,7 @@
    "id": "f1a849ce-578b-4216-9f68-f55ab81d5c9d",
    "metadata": {},
    "source": [
-    "## Test EfficientNet Museum augmented (unweighted) "
+    "## Test Xception Museum augmented (unweighted) "
    ]
   },
   {
