added crossvalidation for Museum tests for both networks

--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -156,6 +156,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3280a7ce-0631-4d3e-8f5c-0c262b913877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "# Choose correct folder name\n",
+    "dir_name = \"Test\"\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (300,300), \"Efficient\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
+    "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
+    "                      model, metric_list, lr_schedule, (300,300), None, 5, 20)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_effnet_baseline\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "ev.evaluateCrossValidation(dir_name, history)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8a3cd7f2-9da4-4e40-b4e2-3d6031ec684d",
    "metadata": {},
@@ -193,7 +224,7 @@
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
-    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_EfficientNet_Musuem_re\"\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_EfficientNet_Museum_re\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
     "utils.saveModel(model, dir_name + \"/EfficientNet_Musuem_re.h5\")"
@@ -208,6 +239,37 @@
    "source": [
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6263bb8-350e-4611-be29-83c4cfab06f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "# Choose correct folder name\n",
+    "dir_name = \"Test\"\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (300,300), \"Efficient\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
+    "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
+    "                      model, metric_list, lr_schedule, (300,300), class_weight, 5, 20)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_re_effnet\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
   {
@@ -263,6 +325,37 @@
    "source": [
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "face8bce-8c20-46dc-8fe5-fe7cde4174b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "# Choose correct folder name\n",
+    "dir_name = \"Test\"\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(True, (300,300), \"Efficient\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
+    "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
+    "                      model, metric_list, lr_schedule, (300,300), None, 5, 20)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_aug_effnet\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
   {
@@ -344,7 +437,6 @@
    "outputs": [],
    "source": [
     "epochs = 20\n",
-    "class_weight = mit.findClassWeights(fftrain_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
