--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -120,7 +120,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
-    "    model = m.build_model(False, (300,300), \"Xception\")\n",
+    "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
     "        1e-4,\n",
@@ -155,6 +155,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ca8c0b-2671-4d62-b459-e74a90796799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "# Choose correct folder name\n",
+    "dir_name = \"Test\"\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (299,299), \"Xception\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
+    "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
+    "                      model, metric_list, lr_schedule, (299,299), None, 5, 20)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_xcep_baseline\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "ev.evaluateCrossValidation(dir_name, history)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "02218098-a690-469d-bc77-234531804871",
    "metadata": {},
@@ -175,7 +206,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
-    "    model = m.build_model(False, (300,300), \"Xception\")\n",
+    "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
     "        1e-4,\n",
@@ -192,10 +223,10 @@
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
-    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_Xception_Musuem_re\"\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_Xception_Museum_re\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
-    "utils.saveModel(model, dir_name + \"/Xception_Musuem_re.h5\")"
+    "utils.saveModel(model, dir_name + \"/Xception_Museum_re.h5\")"
    ]
   },
   {
@@ -207,6 +238,37 @@
    "source": [
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cac66c9-f0fd-4653-8fec-1e55c734dc81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "# Choose correct folder name\n",
+    "dir_name = \"Test\"\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(False, (299,299), \"Xception\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
+    "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
+    "                      model, metric_list, lr_schedule, (299,299), class_weight, 5, 20)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_re_xcep\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
   {
@@ -230,7 +292,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
-    "    model = m.build_model(True, (300,300), \"Xception\")\n",
+    "    model = m.build_model(True, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
     "        1e-4,\n",
@@ -262,6 +324,37 @@
    "source": [
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78b9d887-3a7d-437b-bc6b-712839f9436a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy = tf.distribute.MirroredStrategy()\n",
+    "# Choose correct folder name\n",
+    "dir_name = \"Test\"\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    model = m.build_model(True, (299,299), \"Xception\")\n",
+    "    metric_list = m.metrics_list()\n",
+    "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
+    "        1e-4,\n",
+    "        decay_steps=100000,\n",
+    "        decay_rate=0.96,\n",
+    "    )\n",
+    "\n",
+    "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
+    "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
+    "                      model, metric_list, lr_schedule, (299,299), None, 5, 20)\n",
+    "\n",
+    "print(\"Make folder...\")\n",
+    "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_aug_xcep\"\n",
+    "os.mkdir(dir_name)\n",
+    "\n",
+    "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
   {
